--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "covidtabiere",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,8 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/react": "^11.0.0-next.12",
     "next": "9.3.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "simple-peer": "^9.6.2",
+    "styled-components": "^5.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.31",
+    "@types/react": "^16.9.25",
+    "@types/simple-peer": "^9.6.0",
+    "@types/styled-components": "^5.0.1",
+    "typescript": "^3.8.3"
   }
 }
